# statusbar

./: .gitignore  Cargo.toml  config.def.rs  makefile
icons/: balzac.xpm  hinata.xpm  kanna.xpm  lucy.xpm  miku.xpm  ram.xpm  rem.xpm  salamander.xpm  sonico.xpm  vert.xpm  yoko.xpm
scripts/: pacman.sh  pulseaudio.py
src/: bar.rs  config.rs  constants.rs  dzen_format.rs  kill.rs  main.rs  tasks.rs  x.rs
src/dzen_format/: config.rs  external.rs  parser.rs  utils.rs
src/tasks/: dzen.rs  external.rs  generator.rs  main_task.rs  pipo.rs
src/tasks/generator/: batgen.rs  cpugen.rs  diskgen.rs  echogen.rs  folgen.rs  ipgen.rs  netgen.rs  onegen.rs  ramgen.rs  tempgen.rs  timegen.rs
utils/: statusbar_suspend
