[package]
name = "statusbar"
version = "0.1.0"
authors = ["Erik Rimskog <erik.rimskog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.4"
async-trait = "^0.1.26"
sysinfo = "^0.12.0"
async-std = "^1.5.0"
itertools = "^0.9.0"
nix = "^0.17.0"
tokio = {version = "^0.2.13", features = ["full"]}
x11rb = {version = "^0.4.1", features = ["randr", "xinerama"]}
chrono = "^0.4.11"
