[package]
name = "statusbar"
version = "0.1.0"
authors = ["Erik Rimskog <erik.rimskog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.4"
async-trait = "^0.1.26"
sysinfo = "^0.14.9"
itertools = "^0.9.0"
nix = "^0.17.0"
tokio = {version = "^0.2.13", features = ["rt-core", "io-util", "fs", "sync", "macros", "process", "time", "signal"]}
x11rb = {version = "^0.4.1", features = ["randr", "xinerama"]}
chrono = "^0.4.11"
dbus = "^0.8.2"
dbus-tokio = "^0.5.1"
simple-error = "^0.2.1"
either = "^1.5.3"
regex = "1"
stderrlog = "^0.4"
log = "^0.4"
